# sencell

./: .gitignore  Allmarkers.ipynb  Generate_table_sampling.sh  Hu_generate_table_data1.ipynb  Hu_generate_table_data2.ipynb  Plasma_cells_DEG_results.csv  README.md  Sampling Tuotrial.md  Sampling_Tutorial.md  Senescent_Tables_Explanation.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  Untitled5.ipynb  Yi_predict_sene_makrers.csv  all_markers_epoch.ipynb  allmarkers_disease.ipynb  allmarkers_s5.ipynb  cell_types.csv  check_attention_diease.ipynb  check_attention_s5.ipynb  compare.ipynb  deepsas_v1.py  generate_3tables.py  generate_table.ipynb  initial_sene_markers.csv  jobs.sh  main.py  main3.py  main4.py  model-Copy1.ipynb  model.ipynb  model_AE.py  model_GAT.py  model_Sencell.py  modelsize_estimate.py  modified_table3.xlsx  plot_figure.py  plot_nsnc.ipynb  (+29 more)
.ipynb_checkpoints/: Allmarkers-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb  Untitled4-checkpoint.ipynb  Untitled5-checkpoint.ipynb  all_markers_epoch-checkpoint.ipynb  allmarkers_disease-checkpoint.ipynb  allmarkers_healthy-checkpoint.ipynb  allmarkers_s5-checkpoint.ipynb  check_attention_diease-checkpoint.ipynb  check_attention_s5-checkpoint.ipynb  model-Copy1-checkpoint.ipynb  model-checkpoint.ipynb  plots-checkpoint.ipynb  plots_umap-checkpoint.ipynb  process_results_disease-checkpoint.ipynb  process_results_healthy-checkpoint.ipynb  s5_gad-Copy2-checkpoint.ipynb  s5_gad-Copy3-checkpoint.ipynb  (+2 more)
(+37 files in other folders)
