[project]
name = "sencell"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]


dependencies = [
    "torch==1.9.0+cu111",
    "torch-geometric==2.0.3",
    "numpy>=1.0,<2.0",
    "pandas==1.4.2",
    "scanpy==1.9.2",
    "leidenalg>=0.10.2",
    "tabulate==0.9.0",
    "torch-sparse==0.6.12",
    "torch-scatter==2.0.9",
    "ipykernel>=6.29.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/torch/"
name = "torch"


[[tool.pdm.source]]
type = "find_links"
url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu111.html"
name = "pyg_torch-1.9.0+cu111"
